<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>fasttube_sim</name>
  <version>0.1.0</version>
  <description>
    FastTube – Livox HAP TX simulation bridge for ROS 2.
    Converts PointCloud2 messages from Gazebo into Livox HAP UDP packets
    so the Rust detection app receives data on port 57000.
  </description>
  <maintainer email="user@example.com">FastTube Team</maintainer>
  <license>MIT</license>

  <buildtool_depend>ament_python</buildtool_depend>

  <depend>rclpy</depend>
  <depend>sensor_msgs</depend>
  <depend>gazebo_ros</depend>

  <exec_depend>python3-numpy</exec_depend>

  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
